package com.panda.study.designmodel.bridge;

/**
 * Created by Administrator on 2019/7/30.
 */
//接口
public interface Brand {
    void open();
    void close();
    void call();
}

